rulesetlib_LTLIBRARIES = libtae.la

rulesetlibdir = $(libdir)/tpserver/ruleset

libtae_la_SOURCES = tae.cpp universe.cpp spaceobject.cpp emptyobject.cpp \
					starsystem.cpp planet.cpp ownedobject.cpp fleet.cpp \
					colonize.cpp taeturn.cpp

libtae_la_LDFLAGS = -module

noinst_HEADERS = tae.h universe.h spaceobject.h emptyobject.h starsystem.h \
				 planet.h ownedobject.h fleet.h colonize.h taeturn.h
