## Process this file with automake to produce Makefile.in

#
rulesetlib_LTLIBRARIES = libriskxml.la

rulesetlibdir = $(libdir)/tpserver/ruleset

#All .cpp's
libriskxml_la_SOURCES = ticpp.cpp tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp

libriskxml_la_LDFLAGS = -module

#All the .h's
noinst_HEADERS = ticpp.h ticpprc.h tinystr.h tinyxml.h
